# chunks-sync

./: .gitignore  BENCHMARKS.md  LICENSE  PINECONE_VALIDATION.md  README.md  pyproject.toml  test_core.py
benchmarks/: download_dataset.py  run_benchmark.py
benchmarks/results/: results_wiki_100_20260611_153455.json  results_wiki_100_20260611_153623.json  results_wiki_100_20260611_153749.json  results_wiki_100_20260612_222811.json  results_wiki_100_20260612_222856.json  results_wiki_100_20260612_223038.json
chunks_sync/: __init__.py  adapters.py  chunker.py  engine.py  hasher.py  loader.py  registry.py
examples/: pinecone_demo.py
